# FF-DEFLATE

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
docs/: API.md
examples/: basic.cpp
include/: ff_deflate.h
src/: ff_deflate.cpp
tests/: test_ff_deflate.cpp
